--- a/Resources/Views/ViewControllers/ServiceMessageViewController.xib
+++ b/Resources/Views/ViewControllers/ServiceMessageViewController.xib
@@ -47,7 +47,7 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">roster-section.jpg</string>
+							<string key="NSResourceName">roster-section.png</string>
 						</object>
 					</object>
 					<object class="IBUILabel" id="1055207540">
@@ -71,6 +71,13 @@
 				</object>
 				<string key="NSFrameSize">{320, 480}</string>
 				<reference key="NSSuperview"/>
+				<object class="NSColor" key="IBUIBackgroundColor">
+					<int key="NSColorSpace">3</int>
+					<bytes key="NSWhite">MC43NQA</bytes>
+					<object class="NSColorSpace" key="NSCustomColorSpace">
+						<int key="NSID">2</int>
+					</object>
+				</object>
 				<bool key="IBUIClipsSubviews">YES</bool>
 				<bool key="IBUIMultipleTouchEnabled">YES</bool>
 				<bool key="IBUIBouncesZoom">NO</bool>
