fixed crash occurring when contact request is accepted. tweaked look and feel a bit.

--- a/Resources/Views/TableCells/AccountSubCell.xib
+++ b/Resources/Views/TableCells/AccountSubCell.xib
@@ -155,6 +155,7 @@
 				</object>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 				<int key="IBUISeparatorStyle">1</int>
+				<int key="IBUISelectionStyle">0</int>
 				<int key="IBUIAccessoryType">1</int>
 				<reference key="IBUIContentView" ref="829312368"/>
 				<string key="IBUIReuseIdentifier">AccountSubCell</string>
